--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "bootstrap": "^3.4.1",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.5",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.10",
@@ -18,7 +18,7 @@
     "gulp-less": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
-    "jquery": "3.3.1",
+    "jquery": "^3.4.0",
     "magnific-popup": "^1.1.0",
     "scrollreveal": "^3.1.4"
   },
